# tex-fast-recompile

./: README.md  pytest.ini  setup.cfg  setup.py
tests/: test_main.py
tex/: fastrecompile.sty
tex_fast_recompile/: __init__.py  __main__.py  latexmk.py  util.py
