[metadata]
name = tex-fast-recompile
version = 0.1.0
author = user202729
description = A Python module to speed up TeX compilation.
long_description = file: README.md
long_description_content_type = text/markdown
license = LPPL 1.3c
url = https://github.com/user202729/tex-fast-recompile
classifiers =
    License :: OSI Approved
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = tex_fast_recompile
install_requires =
    watchdog~=2.1.2

[options.entry_points]
console_scripts =
	tex_fast_recompile = tex_fast_recompile.__main__:main

