[metadata]
name = tex-fast-recompile
version = 0.5.1
author = user202729
description = A Python module to speed up TeX compilation.
long_description = file: README.md
long_description_content_type = text/markdown
license = LPPL 1.3c
url = https://github.com/user202729/tex-fast-recompile
classifiers =
    License :: OSI Approved
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = tex_fast_recompile
install_requires =
    watchdog~=2.1.2
    psutil~=5.9.4

[options.entry_points]
console_scripts =
	tex_fast_recompile = tex_fast_recompile.__main__:main
	tex_fast_recompile_latexmk = tex_fast_recompile.latexmk:main

